<resources>
    <!-- App Title -->
    <string name="app_name">SpaceSoldier</string>

    <!-- Activity Title -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_edit">Edit</string>

    <!-- Common Button Label -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="attachment">Attachment</string>
    <string name="addFile">Add File</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="addComment">Add Comment</string>
    <string name="postComment">Post comment</string>
    <string name="reply">Reply</string>

    <!-- Common Field Item -->
    <string name="summary">Summary</string>
    <string name="photos">Photos</string>
    <string name="notes">Notes</string>
    <string name="createDateTime">Created Datetime</string>
    <string name="creator">Creator</string>
    <string name="allRecords">All Records</string>
    <string name="confirmed">Confirmed</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="data">Data</string>
    <string name="comment">Comment</string>
    <string name="status">Status</string>

    <!-- Login view -->
    <string name="login_message">Enter your subdomain name login name and password, AppID.</string>
    <string name="login_domain_hint">Subdomain.cybozu.com</string>
    <string name="login_name_hint">Login Name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_app_id_hint">App ID</string>
    <string name="login_import_cert">Import certificate</string>
    <string name="login_cert_password">Certificate Password</string>

    <!-- Record List view -->
    <string-array name="view_record_list_list">
        <item>@string/allRecords</item>
        <item>@string/unconfirmed</item>
        <item>@string/confirmed</item>
    </string-array>
    <string name="no_record">no record</string>

    <!-- Record Card List view -->
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="user_name">user name</string>
    <string name="date_time">date time</string>

    <!-- comment card list -->
    <string name="no_comment">no comment</string>

    <!-- Attachment Dialog -->
    <string name="attachment_upload_title">Upload Photos</string>
    <string name="attachment_camera_message">Shoot with camera</string>
    <string name="attachment_gallery_message">Choose a gallery</string>
    <string name="attachment_cancel_message">Cancel</string>

    <!-- Delete Dialog -->
    <string name="delete_message">Are you sure you want to delete this?</string>
    <string name="comment_delete_message">Are you sure you want to delete this comment?</string>
    <string name="delete_ok_message">OK</string>
    <string name="delete_ng_message">Cancel</string>

    <!-- Exception Message Dialog -->
    <string name="exception_dialog_title">Exception raised</string>
</resources>
