<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cybozu.spacesoldier.activities.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_login_label"
                style="@style/BaseTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_activity_login"
                android:textColor="@color/colorBlackString"
                android:typeface="normal" />

            <TextView
                android:id="@+id/login_login_message_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/login_message_margin"
                android:ems="10"
                android:focusable="false"
                android:gravity="top|center"
                android:singleLine="false"
                android:text="@string/login_message"
                android:textColor="@color/colorBlackString"
                android:textSize="@dimen/activity_text_size_default" />

            <ScrollView
                android:id="@+id/login_form"

                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/login_domain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/login_domain_hint"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/activity_text_size_default" />

                    <EditText
                        android:id="@+id/login_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/login_name_hint"
                        android:inputType="textPersonName"
                        android:textSize="@dimen/activity_text_size_default" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:textSize="@dimen/activity_text_size_default" />

                    <EditText
                        android:id="@+id/login_app_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/login_app_id_hint"
                        android:inputType="number"
                        android:textSize="@dimen/activity_text_size_default" />

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/login_import_cert_button"
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="importCert"
                            android:text="@string/login_import_cert"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/login_cert_file_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="none|number"
                            android:textSize="@dimen/activity_text_size_default"
                            android:focusable="false"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/login_import_cert_button"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/login_delete_cert_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="9dp"
                            android:layout_marginRight="9dp"
                            android:background="@null"
                            android:onClick="deleteClientCert"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/delete_file" />
                    </android.support.constraint.ConstraintLayout>

                    <EditText
                        android:id="@+id/login_cert_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/login_cert_password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/activity_text_size_default" />

                    <Button
                        android:id="@+id/login_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/activity_login_marginHorizontal"
                        android:onClick="signIn"
                        android:text="@string/login" />


                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>