<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordDetailDataFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos"
                android:textColor="#707070"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/reord_image1"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="8dp"
                    card_view:srcCompat="@drawable/icon_default" />

                <ImageView
                    android:id="@+id/reord_image2"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="8dp"
                    card_view:srcCompat="@drawable/icon_default" />

                <ImageView
                    android:id="@+id/reord_image3"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="8dp"
                    card_view:srcCompat="@drawable/icon_default" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="7dp"
                android:text="@string/summary"
                android:textColor="#707070"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/reord_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="7dp"
                android:text="@string/createDateTime"
                android:textColor="#707070"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/reord_create_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="7dp"
                android:text="@string/creator"
                android:textColor="#707070"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/reord_creater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="7dp"
                android:text="@string/notes"
                android:textColor="#707070"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/reord_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="7dp"
                android:text="@string/status"
                android:textColor="#707070"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/reord_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>