<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_header_layout_height">

        <ImageButton
            android:id="@+id/view_record_list_logout_button"
            style="@style/BaseButtonStyle"
            android:background="@null"
            android:contentDescription="@string/logout"
            android:onClick="logOut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_logout" />

        <ImageButton
            android:id="@+id/view_record_list_add_button"
            style="@style/BaseButtonStyle"
            android:background="@null"
            android:contentDescription="@string/add"
            android:onClick="addRecord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_add" />

        <Spinner
            android:id="@+id/view_record_list_record_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:entries="@array/view_record_list_list"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view_record_list_add_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/view_record_list_logout_button"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/view_record_list_no_record"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/view_record_list_no_record_image"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:contentDescription="@string/no_record"
            app:srcCompat="@drawable/icon_no_record" />

        <TextView
            android:id="@+id/view_record_list_no_record_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/no_record"
            android:textSize="24sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/view_record_list_card_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/record_list_background"
        android:divider="@null"></ListView>

</LinearLayout>